--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,3 +1,12 @@
 .header {
+  display: grid;
+  grid-template-columns: minmax(320px, 1280px);
+  margin: 0 15.625%;
+  border-bottom: 1px solid #545454;
+}
 
+@media screen and (max-width: 320px) {
+  .header {
+    margin: 0;
+  }
 }
