--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,10 +5,15 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1024px) {
+  .header__logo {
+    margin: 45px 0 41px 5.9375%;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .header__logo {
     max-width: 103.74px;
     max-height: 24.4px;
-    margin: 28px 0 31.6px 27px;
   }
 }
