--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,7 +8,12 @@
   background-position: center;
   border: 1px solid #fff;
   background-color: transparent;
+  transition: opacity .3s ease;
   cursor: pointer;
+}
+
+.profile__edit-button:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 768px) {
