--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,5 +11,7 @@
 @media screen and (max-width: 768px) {
   .footer__copyright {
     padding: 48px 0 36px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
