refactor and style popup block

--- a/blocks/popup/__text-input/popup__text-input.css
+++ b/blocks/popup/__text-input/popup__text-input.css
@@ -1,7 +1,6 @@
-.popup__name-input {
+.popup__text-input {
   width: 100%;
-  margin-bottom: 30px;
-  padding: 10px 4px;
+  padding: 8px 0;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-style: normal;
