--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,6 @@
 .popup {
   position: fixed;
-  top: 0;
+  top: -114px;
   left: 0;
   bottom: 0;
   right: 0;
@@ -9,4 +9,10 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .popup {
+    top: -267px;
+  }
 }
