--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,7 +5,8 @@
 
 @media screen and (max-width: 768px) {
   .profile__info {
-    max-width: 100%;
+    display: flex;
+    flex-direction: column;
     margin: 25px 0 30px;
   }
 }
