--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,11 +4,14 @@
   left: 0;
   bottom: 0;
   right: 0;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility .4s, opacity .4s ease;
 }
 
 @media screen and (max-width: 768px) {
