fix after review

--- a/blocks/card/__delete-button/card__delete-button.css
+++ b/blocks/card/__delete-button/card__delete-button.css
@@ -1,4 +1,4 @@
-.photo-grid__delete-button {
+.card__delete-button {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -13,6 +13,6 @@
   cursor: pointer;
 }
 
-.photo-grid__delete-button:hover {
+.card__delete-button:hover {
   opacity: .5;
 }
