--- a/blocks/card/__like/card__like-button.css
+++ b/blocks/card/__like/card__like-button.css
@@ -1,4 +1,4 @@
-.photo-grid__like {
+.card__like-button {
   width: 22px;
   height: 19px;
   background-image: url(../../../images/like.svg);
@@ -10,6 +10,6 @@
   cursor: pointer;
 }
 
-.photo-grid__like:hover {
+.card__like-button:hover {
   opacity: .5;
 }
