--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,7 +7,7 @@
   margin: 0 5.9375%;
   padding: 35px 36px 37px;
   background-color: #fff;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
   border-radius: 10px;
   box-sizing: border-box;
 }
