--- a/blocks/popup/__data-input/popup__data-input.css
+++ b/blocks/popup/__data-input/popup__data-input.css
@@ -1,4 +1,4 @@
-.popup__text-input {
+.popup__data-input {
   width: 100%;
   padding: 8px 0;
   border: none;
@@ -11,6 +11,6 @@
   box-sizing: border-box;
 }
 
-.popup__text-input:not(:first-of-type) {
+.popup__data-input:not(:first-of-type) {
   margin-top: 22px;
 }
