--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,4 +1,4 @@
-.profile__job {
+.profile__description {
   max-width: 203px;
   margin: 0;
   font-style: normal;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .profile__job {
+  .profile__description {
     align-self: center;
     width: 91%;
     font-size: 14px;
