--- a/blocks/popup/__container/_place/popup__container_place_overview.css
+++ b/blocks/popup/__container/_place/popup__container_place_overview.css
@@ -1,6 +1,6 @@
 .popup__container_place_overview {
   max-width: max-content;
-  margin: 5% 0 0 0;
+  margin: 0;
   padding: 0;
   background-color: transparent;
   border-radius: 0;
