--- a/blocks/popup/__data-input/popup__data-input.css
+++ b/blocks/popup/__data-input/popup__data-input.css
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 8px 0;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
