--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,7 +8,9 @@
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__wrapper/profile__wrapper.css);
 @import url(../blocks/profile/__name/profile__name.css);
@@ -25,6 +27,7 @@
 @import url(../blocks/card/__info/card__info.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like/card__like-button.css);
+@import url(../blocks/card/__like-count/card__like-count.css);
 @import url(../blocks/card/__like/_active/card__like-button_active.css);
 
 @import url(../blocks/footer/footer.css);
